[tool.poetry]
name = "virtual-critical-load"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "virtual_critical_load"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
schedule = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
